<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fondo"
                android:gravity="center_vertical"
                tools:context="com.example.usuario.rekindlefrontend.view.users.edit.ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:actionBarSize"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            style="@style/text_view"
            android:layout_marginBottom="@dimen/dim10"
            android:layout_marginTop="@dimen/dim20"
            android:text="@string/cambiar_password"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/actual_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim20"
                android:layout_marginRight="@dimen/dim20"
                android:layout_marginTop="@dimen/dim6"
                android:hint="@string/actual_password"
                android:inputType="textPassword"
                android:text=""/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim20"
                android:layout_marginRight="@dimen/dim20"
                android:layout_marginTop="@dimen/dim6"
                android:hint="@string/nuevo_password"
                android:inputType="textPassword"
                android:text=""/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim20"
                android:layout_marginRight="@dimen/dim20"
                android:layout_marginTop="@dimen/dim6"
                android:hint="@string/repetir_password"
                android:inputType="textPassword"
                android:text=""/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/guardar_cambiar_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim24"
            android:text="@string/guardar"/>
    </LinearLayout>

</RelativeLayout>
