<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/titulo_cambio_contrasena"
        style="@style/text_view"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dim10"
        android:layout_marginTop="@dimen/dim20"
        android:text="@string/cambiar_password"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim6">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/codigo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dim20"
            android:layout_marginRight="@dimen/dim20"
            android:hint="@string/introducir_codigo"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim6">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dim20"
            android:layout_marginRight="@dimen/dim20"
            android:hint="@string/password1"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim6">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirmar_contrasena"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dim20"
            android:layout_marginRight="@dimen/dim20"
            android:hint="@string/repetir_password"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/cambiar_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim20"
        android:text="@string/guardar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/back_to_menu"
            style="@style/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dim20"
            android:layout_marginEnd="@dimen/dim20"
            android:layout_marginStart="@dimen/dim20"
            android:text="@string/back_to_login"
            android:textSize="16sp"/>

    </RelativeLayout>

</LinearLayout>